ADD YOUR COMMENT HERE

--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -10,5 +10,7 @@
     </p>
   <% end %>
 </div>
+<td><%= image_tag recipe.image.url, class: "recipe-show" if recipe.image? %></td>
 
+ 
 <%= link_to "New recipe", new_recipe_path %>
