--- a/app/views/recipes/_recipe.html.erb
+++ b/app/views/recipes/_recipe.html.erb
@@ -3,7 +3,21 @@
     <strong>Title:</strong>
     <%= recipe.title %>
   </p>
+<div class="form-group">
 
+    <%= form.file_field :image %>
+
+    <% if @recipe.image? %>
+
+      <%= image_tag @recipe.image.url, class: "recipe-show" %>
+
+      <%= form.check_box :remove_image %>
+
+        Remove Image
+
+    <% end %>
+
+ </div>
   <p>
     <strong>Description:</strong>
     <%= recipe.description %>
